[CHANGES] update filter product supplies